--- a/02_introduccion_a_git.ipynb
+++ b/02_introduccion_a_git.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Descarga de ```Git```.\n",
+    "### Descarga de *Git*.\n",
     "\n",
     "*Git* ha sido portado a prácticamente todas plataformas y sistemas operativos modernos, conformando parte de los paquetes básicos de un entorno de desarrollo. Sin embargo, también es posible descargar un instalador desde la siguiente liga: \n",
     "\n",
@@ -100,7 +100,7 @@
     "\n",
     "La siguiente inagen correpsonde a la interfas de *Git GUI*.\n",
     "\n",
-    "<img src=\"img/01/git-gui.png\" width=\"250px\">"
+    "<img src=\"img/02/git-gui.png\" width=\"250px\">"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "source": [
     "#### *Git Bash*.\n",
     "\n",
-    "El cliente *Git Bash* se utiliza primordialmente en sistemas basados en *Windows*. Este cliente crea una terminal corriendo la biblioteca [*Ming-w64*](mingw-w64.org), la cual es capaz de ejecutar no sólo el comando ```git```, sino que crea un entorno que contiene al shell [*bash*](https://www.gnu.org/software/bash/). De este modo es posible tener una *CLI* muy similar a la usada en sistemas basados en *GNU/Linux*."
+    "El cliente *Git Bash* se utiliza primordialmente en sistemas basados en *Windows*. Este cliente crea una terminal corriendo la biblioteca [*Ming-w64*](mingw-w64.org), la cual es capaz de ejecutar no sólo el comando ```git```, sino que crea un entorno que contiene al shell [*bash*](https://www.gnu.org/software/bash/). De este modo es posible tener una interfaz de línea de comados (*CLI*) muy similar a la usada en sistemas basados en *GNU/Linux*."
    ]
   },
   {
@@ -121,11 +121,11 @@
     "El comando ```git``` permite realizar muy diveras operaciones con repositorios de *Git* mediante la siguiente sintaxis.\n",
     "\n",
     "``` bash\n",
-    "git <verbo> <opciones y argumentos>\n",
+    "git <subcomando> <opciones y argumentos>\n",
     "```\n",
     "Donde:\n",
     "\n",
-    "* ```<verbo>``` es un subcomando de ```git```.\n"
+    "* ```<subcomando>``` es un subcomando de ```git```.\n"
    ]
   },
   {
