--- a/04_gestion_de_ramas.ipynb
+++ b/04_gestion_de_ramas.ipynb
@@ -382,10 +382,10 @@
     "* Al ejecutar el comando ```git log --oneline``` el resultado será similar a los siguiente.\n",
     "\n",
     "``` bash\n",
-    "fa09b99 (HEAD -> nueva) primer commit de la rama nueva\n",
-    "23dfde9 (master) cuarto commit\n",
-    "971e1d8 segundo commit\n",
-    "3c76e61 primer commit\n",
+    "46c8014 (HEAD -> nueva) primer commit de la rama nueva\n",
+    "ba397e8 (master) cuarto commit\n",
+    "cb0b6bb segundo commit\n",
+    "ed7d117 primer commit\n",
     "```\n",
     "\n",
     "Ahora el commit se ve reflejado en la rama ```nueva```."
@@ -507,10 +507,10 @@
     "* Al ejecutar el comando ```git log --oneline``` el resultado será similar a los siguiente.\n",
     "\n",
     "```bash\n",
-    "4d92f33 (HEAD -> master) quinto commit\n",
-    "23dfde9 cuarto commit\n",
-    "971e1d8 segundo commit\n",
-    "3c76e61 primer commit\n",
+    "0834a0b (HEAD -> master) quinto commit\n",
+    "ba397e8 cuarto commit\n",
+    "cb0b6bb segundo commit\n",
+    "ed7d117 primer commit\n",
     "```\n"
    ]
   },
@@ -732,46 +732,13 @@
     "* Tomando en cuenta los siquientes commits en ```master```:\n",
     "\n",
     "```bash\n",
-    "50d67cd (HEAD -> master) commit fusionado\n",
-    "7a924b8 quinto commit\n",
-    "1fe52e5 (nueva) primer commit de la rama nueva\n",
-    "d0634ee cuarto commit\n",
-    "27e8679 segundo commit\n",
-    "0bb5d91 primer commit\n",
-    "```\n",
-    "\n",
-    "* Si se quisiera restaurar el; estado del commit con descripción ```cuarto commit```, se jecutaría el siguiente comando:\n",
-    "\n",
-    "```bash\n",
-    "git checkout d0634ee\n",
-    "```\n",
-    "\n",
-    "Y el resultado será descrito con el siguiente mensaje:\n",
-    "\n",
-    "```\n",
-    "Note: checking out 'd0634ee'.\n",
-    "\n",
-    "You are in 'detached HEAD' state. You can look around, make experimental\n",
-    "changes and commit them, and you can discard any commits you make in this\n",
-    "state without impacting any branches by performing another checkout.\n",
-    "\n",
-    "If you want to create a new branch to retain commits you create, you may\n",
-    "do so (now or later) by using -b with the checkout command again. Example:\n",
-    "\n",
-    "  git checkout -b <new-branch-name>\n",
-    "\n",
-    "HEAD is now at d0634ee cuarto commit\n",
-    "\n",
-    "```\n",
-    "\n",
-    "* Se crearía una nueva rama llamada ```restituida```.\n",
-    "\n",
-    "``` bash\n",
-    "git checkout -b restituida\n",
-    "```\n",
-    "\n",
-    "* Que contendría el estado restaurado.\n",
-    "\n"
+    "f7ede1 (HEAD -> master) commit fusionado\n",
+    "0834a0b quinto commit\n",
+    "46c8014 (nueva) primer commit de la rama nueva\n",
+    "ba397e8 cuarto commit\n",
+    "cb0b6bb segundo commit\n",
+    "ed7d117 primer commit\n",
+    "```"
    ]
   },
   {
@@ -784,12 +751,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Si se quisiera restaurar el; estado del commit con descripción ```cuarto commit```, se jecutaría el siguiente comando:\n",
+    "\n",
+    "```bash\n",
+    "git checkout ba397e8\n",
+    "```\n",
+    "\n",
+    "Y el resultado será descrito con el siguiente mensaje:\n",
+    "\n",
+    "```\n",
+    "Note: checking out 'ba397e8'.\n",
+    "\n",
+    "You are in 'detached HEAD' state. You can look around, make experimental\n",
+    "changes and commit them, and you can discard any commits you make in this\n",
+    "state without impacting any branches by performing another checkout.\n",
+    "\n",
+    "If you want to create a new branch to retain commits you create, you may\n",
+    "do so (now or later) by using -b with the checkout command again. Example:\n",
+    "\n",
+    "  git checkout -b <new-branch-name>\n",
+    "\n",
+    "HEAD is now at ba397e8 cuarto commit\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout b94e762 #NOTA: Es necesario sustituir el número identificador."
+    "git checkout ba397e8 #NOTA: Es necesario sustituir el número identificador."
    ]
   },
   {
@@ -811,12 +806,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Se crearía una nueva rama llamada ```restituida```.\n",
+    "\n",
+    "``` bash\n",
+    "git checkout -b restituida\n",
+    "```\n",
+    "\n",
+    "* Que contendría el estado restaurado."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "git checkout -b restituida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log"
    ]
   },
   {
