--- a/05_repositorios_remotos.ipynb
+++ b/05_repositorios_remotos.ipynb
@@ -85,15 +85,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rm -rf experimental"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git clone https://github.com/PythonistaIO/prueba.git"
+    "git clone https://github.com/PythonistaIO/nuevo.git"
    ]
   },
   {
@@ -122,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd prueba"
+    "cd nuevo"
    ]
   },
   {
@@ -248,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Se relacionará al repositorio localizado en la URL ```git@github.com:PythonistaIO/prueba.git``` con el nombre ```alterno```"
+    "* Se relacionará al repositorio localizado en la URL ```git@github.com:PythonistaIO/nuevo.git``` con el nombre ```alterno```"
    ]
   },
   {
@@ -257,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git remote add alterno git@github.com:PythonistaIO/prueba.git"
+    "git remote add alterno git@github.com:PythonistaIO/nuevo.git"
    ]
   },
   {
@@ -458,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda ejecutará el comado ```git fetch``` para ```origin/naster```."
+    "* La siguiente celda ejecutará el comado ```git fetch``` para ```origin/master```."
    ]
   },
   {
@@ -496,7 +487,7 @@
    "source": [
     "### El comando ```git pull```.\n",
     "\n",
-    "Este comando es similar a ```git getch```, pero realiza un ```merge``` de forma automática. "
+    "Este comando es similar a ```git fetch```, pero realiza un ```merge``` de forma automática. "
    ]
   },
   {
@@ -548,21 +539,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git push origin master"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pwd"
+    "**Ejemplo:**\n",
+    "\n",
+    "``` bash\n",
+    "> git push origin master\n",
+    "```\n",
+    "```bash\n",
+    "Username for 'https://github.com': pythonistaio\n",
+    "Password for 'https://pythonistaio@github.com':\n",
+    "Counting objects: 3, done.\n",
+    "Delta compression using up to 6 threads.\n",
+    "Compressing objects: 100% (2/2), done.\n",
+    "Writing objects: 100% (3/3), 273 bytes | 273.00 KiB/s, done.\n",
+    "Total 3 (delta 1), reused 0 (delta 0)\n",
+    "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\n",
+    "To https://github.com/PythonistaIO/nuevo.git\n",
+    "   7bd73b0..259ba8a  master -> master\n",
+    "```\n",
+    "\n",
+    "``` bash\n",
+    "> git status\n",
+    "```\n",
+    "``` bash\n",
+    "On branch master\n",
+    "Your branch is up to date with 'origin/master'.\n",
+    "\n",
+    "nothing to commit, working tree clean\n",
+    "``` "
    ]
   },
   {
