--- a/07_conflictos_y_correcciones.ipynb
+++ b/07_conflictos_y_correcciones.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operaciones preliminares."
+    "## Preliminares:\n",
+    "\n",
+    "Para este capítulo se utilizará una versión creada previamente del directorio ```demo``` que incluye los ejercicios de los capítulos previos. "
    ]
   },
   {
@@ -27,29 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rm -rf demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "unzip src/07/demo.zip -d ./"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "cd demo"
+    "unzip src/07/demo.zip -d prueba"
    ]
   },
   {
@@ -58,18 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout master"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "git log --oneline"
+    "cd prueba"
    ]
   },
   {
@@ -78,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git status"
+    "git branch"
    ]
   },
   {
@@ -87,17 +56,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls"
+    "git log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log master"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los 3 árboles de Git.\n",
+    "## Los objetos de árbol (*tree-ish*)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Los 3 árboles de Git.\n",
     "\n",
-    "* El sistema de archivos actual o árblo de trabajo.\n",
-    "* El área de preparación (staging area)\n",
+    "\n",
+    "* El sistema de archivos actual o árbol de trabajo.\n",
+    "* El área de preparación (staging area).\n",
     "* El repositorio en el cual se registran los commits."
    ]
   },
@@ -107,7 +93,7 @@
    "source": [
     "## El comando ```git clean```.\n",
     "\n",
-    "El comando ```git clean``` permite eliminar del árbolde trabajo a aquellos archivos que no están en estado de seguimiento.\n",
+    "El comando ```git clean``` permite eliminar del árbol de trabajo a aquellos archivos que no están en estado de seguimiento.\n",
     "\n",
     "``` bash\n",
     "git clean <opciones> <ruta>\n",
