--- a/03_gestion_de_repositorios.ipynb
+++ b/03_gestion_de_repositorios.ipynb
@@ -1208,7 +1208,7 @@
    "source": [
     "## El comando ```git show```.\n",
     "\n",
-    "El comando ```git show```permite msotrar la información del commit más reciente, incluyendo un resumen de las modificaciones a los archivos registradas en dicho commit.\n",
+    "El comando ```git show``` permite msotrar la información del commit más reciente, incluyendo un resumen de las modificaciones a los archivos registradas en dicho commit.\n",
     "\n",
     "```\n",
     "git show <ruta>\n",
@@ -1283,7 +1283,7 @@
     "\n",
     "El resultado es un listado de cada objetos que presente variaciones entre un commit y otro, así como la descripción de dichas diferencias.\n",
     "\n",
-    "La documentación de referencia de ```git diff```está disponible en:\n",
+    "La documentación de referencia de ```git diff``` está disponible en:\n",
     "\n",
     "https://git-scm.com/docs/git-diff"
    ]
@@ -1364,33 +1364,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git diff 663a41c b94e762"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "git diff 663a41c b94e762 archivo-1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para obtener un listado de diferencias entre el commit con descripción ```cuarto commit``` (en este ejemplo correspondería al identificador ```a1c53ed```) y el que tiene la descripción ```primer commit``` (en este ejemplo correspondería al identificador ```e71f6f8```).\n",
+    "* Para obtener un listado de diferencias entre el commit con descripción ```cuarto commit``` (en este ejemplo correspondería al identificador ```ba397e8```) y el que tiene la descripción ```primer commit``` (en este ejemplo correspondería al identificador ```ed7d117```).\n",
     "\n",
     "La operación sería similar a lo siguiente.\n",
     "\n",
     "``` bash\n",
-    "> git diff a1c53ed e71f6f8\n",
+    "> git diff ba397e8 ed7d117\n",
     "```\n",
     "Y el resultado sería similar al siguiente.\n",
     "\n",
@@ -1415,7 +1397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff 4237089 a26eaf2 # NOTA: Es necesario sustituir los números identificadores."
+    "git diff <cuarto commit> <primer commit> # NOTA: Es necesario sustituir los números identificadores."
    ]
   },
   {
@@ -1446,10 +1428,10 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Para conocer los cambios ocurridos en el archivo ```archivo-1``` entre el commit ```2e819d5``` y el commit ```9b87e9b4``` se ejecutaría lo siguiente:\n",
+    "* Para conocer los cambios ocurridos en el archivo ```archivo-1``` entre el commit ```ed7d11``` y el commit ```ba397e8``` se ejecutaría lo siguiente:\n",
     "\n",
     "``` bash\n",
-    "> git diff 2e819d5 9b87e9b4 archivo-1\n",
+    "> git diff ed7d117 ba397e8  archivo-1\n",
     "```\n",
     "\n",
     "* Y el resultado sería similar al siguiente:\n",
@@ -1470,7 +1452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff 4237089 a26eaf2 archivo-1 # NOTA: Es necesario sustituir los números identificadores."
+    "git diff <primer commit> <cuarto commit> archivo-1 # NOTA: Es necesario sustituir los números identificadores."
    ]
   },
   {
