--- a/05_repositorios_remotos.ipynb
+++ b/05_repositorios_remotos.ipynb
@@ -54,7 +54,11 @@
     "Donde:\n",
     "\n",
     "* ```<URL>``` es la ruta en la que se encuentra el repositorio remoto.\n",
-    "* ```<ruta>``` es la ruta del nuevo repositorio local."
+    "* ```<ruta>``` es la ruta del nuevo repositorio local.\n",
+    "\n",
+    "La referencia al comando ```git clone``` puede ser consultada en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-clone"
    ]
   },
   {
@@ -165,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuración de los repositorios remotos en el ámbito ```--local```.\n",
+    "### Configuración de los repositorios remotos en el ámbito ```--local```.\n",
     "\n",
     "La configuración de un repositorio remoto es guardada en el ámbito ```--local``` en un registro con la estructura.\n",
     "\n",
@@ -487,7 +491,11 @@
    "source": [
     "### El comando ```git pull```.\n",
     "\n",
-    "Este comando es similar a ```git fetch```, pero realiza un ```merge``` de forma automática. "
+    "Este comando es similar a ```git fetch```, pero realiza un ```merge``` de forma automática. \n",
+    "\n",
+    "La referencia al comando ```git pull``` puede ser consultada en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-pull"
    ]
   },
   {
@@ -535,7 +543,11 @@
     "\n",
     "Donde:\n",
     "* ```<remoto>``` es el nombre de un repositorio remoto.\n",
-    "* ```<rama>``` es la rama que se quiere afectar en el repositorio remoto."
+    "* ```<rama>``` es la rama que se quiere afectar en el repositorio remoto.\n",
+    "\n",
+    "La referencia al comando ```git push``` puede ser consultada en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-push"
    ]
   },
   {
