--- a/14_docker_compose.ipynb
+++ b/14_docker_compose.ipynb
@@ -11,70 +11,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introducción a *Docker Compose*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**\n",
     "\n",
-    "Se da por sentado de que las celdas de los capítulos previos fueron ejecutadas y que existen imágenes cargadas en el sistema."
+    "Se da por sentado de que *Docker* ya ha sido instalado y está habilitado en el sistema."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conforme los contenedores y particularmente Docker se fueron popularizando, las arquitecturas de servicios basadas en contendores se fueron haciendo cada vez más complejas. El alcance de los dockerfiles se vio restringido a desplegar unos cuantos contenedores cuando en muchos casos, era necesario crear varios servicios de forma simultánea."
+    "Conforme los contenedores, y particularmente *Docker*, se fueron popularizando, las arquitecturas de servicios basadas en contendores se fueron haciendo cada vez más complejas. El alcance de los *Dockerfiles* se vio restringido a desplegar unos cuantos contenedores cuando en muchos casos, era necesario crear varios servicios de forma simultánea."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Docker Compose.\n",
+    "## *Docker Compose*.\n",
     "\n",
-    "[Docker Compose](https://github.com/docker/compose/) es un componente que permite definir la estructura y los servicios de un cluster de contenedores.\n",
+    "[Docker Compose](https://github.com/docker/compose/) es una herralienta que permite definir la estructura y los servicios de un cluster de contenedores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ventajas del uso de *Docker Compose*.\n",
     "\n",
-    "\n"
+    "* Despliegue de múltiples entornos aislados unos de otros desde un anfitrión único.\n",
+    "* Preservación de los volúmentes creados por dichos entornos en un afitrión.\n",
+    "* Permite reconstruir sólo aquellos contenedores que sufren modificaciones.\n",
+    "* Permite el uso de variables en la definición de entornos, permitiendo crear entornos distintos tan sólo con la modificación de dichas variables.\n",
+    " "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vesiones de  Docker compose. \n",
+    "## Instalación de *Docker Compose*.\n",
     "\n",
-    "Al igual que Docker, Docker compose ha sufrido una evolución muy acelerada la cual en muchos casos conlleva problemas de compatibilidad con el Docker Engine desde https://github.com/docker/compose/releases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Distribución de Docker Compose.\n",
+    "*Docker Compose*  es un proyecto de código abierto escrito en Python, por lo que es posible tener acceso al código de éste. Sin embargo, el proyecto ofrece los binarios para las platafomas más comunes (GNU/Linux, Windows y OS X primordialmente.\n",
     "\n",
-    "Docker compose es un proyecto de código abierto, por lo que es posible tener acceso al código de éste. Sin embargo, para mayor comodidad, el proyecto ofrece los binarios para las platafomas más comunes (GNU/Linux, Windows y OS X primordialmente). Además las versiones de *Docker Desktop* para Mac y Windows ya contienen a Docker Compose."
+    "### *Docker Compose* en *Docker Desktop*.\n",
+    "\n",
+    "*Docker Compose* ya se encuentra incluido en [*Docker Descktop*](https://www.docker.com/products/docker-desktop) para las plataformas *Windows* y *Mac OS X*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instalación de Docker Compose en GNU/Linux."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Descarga e instalación de Docker Compose en CentOS 7."
+    "### Descarga e instalación de *Docker Compose* usando los binarios."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "sudo curl -L https://github.com/docker/compose/releases/download/1.25.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose\n",
+    "sudo curl -L https://github.com/docker/compose/releases/download/1.25.0/docker-compose-Linux-x86_64 -o /usr/local/bin/docker-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls /usr/local/bin/docker-compose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sudo chmod +x /usr/local/bin/docker-compose"
    ]
   },
@@ -102,52 +125,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Instalación de Docker Compose en Ubuntu."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sudo apt update && sudo apt upgrade -y && sudo apt install docker-compose -y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudo docker-compose -v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sudo apt remove golang-docker-credential-helpers -y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## YAML.\n",
-    "los archivos de Docker compose son escritos en \"Yet Another Markup Language\" o [*YAML*](https://yaml.org/) un formato derivado de JSON el cual permite describir los componentes y servicios con los que interactuará un cluster de contenedores."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### El lenguaje de los archivos *docker-compose.yml*.\n",
+    "## Los archivos *compose*.\n",
     "\n",
+    "Los archivos *compose* son archivos similares a los *Dockerfiles* y utilizan [*YAML*](https://yaml.org/), un formato derivado de *JSON*,  los cuales permiten describir de forma detallada la estructura, contenido y funcionamiento de una serie de servicios basados en el despliegue de de contenedores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estrucutra de los archivos *compose*.\n",
+    "\n",
+    "Los archivos *compose* utilizan una serie de elementos sintácticos que defi\n",
     "https://docs.docker.com/compose/compose-file/"
    ]
   },
